# mc-launcher-core

./: .env  Cargo.toml  LICENSE  README.md
examples/: simple_launch.rs  simple_offline_launch.rs
src/: lib.rs
src/auth/: microsoft_account.rs  mod.rs  offline.rs
src/command/: mod.rs
src/install/: mod.rs
src/runtime/: mod.rs
src/types/: exceptions_types.rs  helper_types.rs  install_types.rs  microsoft_types.rs  mod.rs  runtime_types.rs  shared_types.rs  vanilla_launcher_types.rs
src/utils/: helper.rs  java.rs  mod.rs  natives.rs
tests/: 1.20.4.json
