[package]
name = "mc-launcher-core"
version = "0.0.1"
license = "MIT"
description = "mc launcher core"
readme = "README.md"
homepage = "https://github.com/Star-tears/mc-launcher-core"
repository = "https://github.com/Star-tears/mc-launcher-core"
keywords = ["minecraft", "mc", "launcher", "core"]
categories = ["development-tools"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
which = "5.0.0"
