[package]
name = "mc-launcher-core"
version = "0.0.1"
license = "MIT"
description = "mc launcher core"
readme = "README.md"
homepage = "https://github.com/Star-tears/mc-launcher-core"
repository = "https://github.com/Star-tears/mc-launcher-core"
keywords = ["minecraft", "mc", "launcher", "core"]
categories = ["development-tools"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
chrono = "0.4.31"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
ring = "0.17.7"
rust-crypto = "0.2.36"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
sysinfo = "0.30.3"
url = "2.5.0"
which = "5.0.0"
winver = "1.0.0"
xz2 = "0.1.7"
zip = "0.6.6"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
